# tig-alternative-with-rust-materials

./: .gitignore
branches-view/: .gitignore  Cargo.toml
branches-view/src/: app.rs  cli.rs  exit_code.rs  main.rs
