[package]
name = "branches-view"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
crossterm = { version = "0.26.1", features = ["event-stream", "serde", "filedescriptor"] }
git2 = "0.17.0"
nix = "0.26.2"
structopt = "0.3.26"
thiserror = "1.0.40"
